--- a/01.Structure.html
+++ b/01.Structure.html
@@ -1,5 +1,7 @@
 <html>
     <body>
-        <p>Hello World</p>
+        <h1>Heading 1</h1>
+        <h2>Heading 2</h2>
+        <p>HTML elements are usually made up of two tags: an opening tag and a closing tag.</p>
     </body>
 </html>
