--- a/01.Structure.html
+++ b/01.Structure.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <title>head title: it is shown</title>
+    </head>
     <body>
         <h1>Heading 1</h1>
         <h2>Heading 2</h2>
