--- a/02.Text.html
+++ b/02.Text.html
@@ -7,5 +7,6 @@
         <h5>Heading 5</h5>
         <h6>Heading 6</h6>
         <p>HTML has six levels of headings.</p>
+        <p>The text is in bold: <b>bold text</b></p>
     </body>
 </html>
