--- a/02.Text.html
+++ b/02.Text.html
@@ -8,5 +8,6 @@
         <h6>Heading 6</h6>
         <p>HTML has six levels of headings.</p>
         <p>The text is in bold: <b>bold text</b></p>
+        <p>The text is in italic: <i>italic text</i></p>
     </body>
 </html>
