--- a/02.Text.html
+++ b/02.Text.html
@@ -9,5 +9,6 @@
         <p>HTML has six levels of headings.</p>
         <p>The text is in bold: <b>bold text</b></p>
         <p>The text is in italic: <i>italic text</i></p>
+        <p>Superscript: 2<sup>2</sup></p>
     </body>
 </html>
