The <sub> element

--- a/02.Text.html
+++ b/02.Text.html
@@ -10,5 +10,6 @@
         <p>The text is in bold: <b>bold text</b></p>
         <p>The text is in italic: <i>italic text</i></p>
         <p>Superscript: 2<sup>2</sup></p>
+        <p>Subscript: CO<sub>2</sub></p>
     </body>
 </html>
