The <br /> element: an empty element to add a line break

--- a/02.Text.html
+++ b/02.Text.html
@@ -11,5 +11,6 @@
         <p>The text is in italic: <i>italic text</i></p>
         <p>Superscript: 2<sup>2</sup></p>
         <p>Subscript: CO<sub>2</sub></p>
+        <p>Line break: <br /> a new line</p>
     </body>
 </html>
