The <hr /> element: an empty element to add a horizontal rule between sections

--- a/02.Text.html
+++ b/02.Text.html
@@ -12,5 +12,6 @@
         <p>Superscript: 2<sup>2</sup></p>
         <p>Subscript: CO<sub>2</sub></p>
         <p>Line break: <br /> a new line</p>
+        <p>Horizontal rule: <hr /> a new line</p>
     </body>
 </html>
