--- a/02.Text.html
+++ b/02.Text.html
@@ -13,5 +13,6 @@
         <p>Subscript: CO<sub>2</sub></p>
         <p>Line break: <br /> a new line</p>
         <p>Horizontal rule: <hr /> a new line</p>
+        <p>Strong element: <strong> the strong element </strong></p>
     </body>
 </html>
