--- a/02.Text.html
+++ b/02.Text.html
@@ -14,5 +14,6 @@
         <p>Line break: <br /> a new line</p>
         <p>Horizontal rule: <hr /> a new line</p>
         <p>Strong element: <strong> the strong element </strong></p>
+        <p>Emphasis element: <em> the em element </em></p>
     </body>
 </html>
