The <blockquote> element

--- a/02.Text.html
+++ b/02.Text.html
@@ -15,5 +15,6 @@
         <p>Horizontal rule: <hr /> a new line</p>
         <p>Strong element: <strong> the strong element </strong></p>
         <p>Emphasis element: <em> the em element </em></p>
+        <blockquote cite="http://where.the.quote.comes.from"> <p> The blockquote element in a new paragraph with indents. The cite attribute is invisible in web browser. </p> </blockquote>
     </body>
 </html>
