--- a/02.Text.html
+++ b/02.Text.html
@@ -16,5 +16,6 @@
         <p>Strong element: <strong> the strong element </strong></p>
         <p>Emphasis element: <em> the em element </em></p>
         <blockquote cite="http://where.the.quote.comes.from"> <p> The blockquote element in a new paragraph with indents. The cite attribute is invisible in web browser. </p> </blockquote>
+        <p>The quote element: <q cite="http://www.baidu.com"> the quote element is used in a paragraph </q> </p>
     </body>
 </html>
