--- a/02.Text.html
+++ b/02.Text.html
@@ -18,5 +18,6 @@
         <blockquote cite="http://where.the.quote.comes.from"> <p> The blockquote element in a new paragraph with indents. The cite attribute is invisible in web browser. </p> </blockquote>
         <p>The quote element: <q cite="http://www.baidu.com"> the quote element is used in a paragraph </q> </p>
         <p>The abbr element: <abbr title="abbreviation">Abbr</abbr> </p>
+        <p>The acronym element: <acronym title="People Republic of China">PRC</acronym></p>
     </body>
 </html>
