The <cite> element

--- a/02.Text.html
+++ b/02.Text.html
@@ -19,5 +19,6 @@
         <p>The quote element: <q cite="http://www.baidu.com"> the quote element is used in a paragraph </q> </p>
         <p>The abbr element: <abbr title="abbreviation">Abbr</abbr> </p>
         <p>The acronym element: <acronym title="People Republic of China">PRC</acronym></p>
+        <p>The cite element: <cite> the cite element </cite> </p>
     </body>
 </html>
