The <def> element

--- a/02.Text.html
+++ b/02.Text.html
@@ -20,5 +20,6 @@
         <p>The abbr element: <abbr title="abbreviation">Abbr</abbr> </p>
         <p>The acronym element: <acronym title="People Republic of China">PRC</acronym></p>
         <p>The cite element: <cite> the cite element </cite> </p>
+        <p>The def element: <def>the definition element</def></p>
     </body>
 </html>
