The <address> element

--- a/02.Text.html
+++ b/02.Text.html
@@ -21,5 +21,9 @@
         <p>The acronym element: <acronym title="People Republic of China">PRC</acronym></p>
         <p>The cite element: <cite> the cite element </cite> </p>
         <p>The def element: <def>the definition element</def></p>
+        <address>
+            <p>URL</p>
+            <p>Address</p>
+        </address>
     </body>
 </html>
