The <ins> element

--- a/02.Text.html
+++ b/02.Text.html
@@ -25,5 +25,6 @@
             <p>URL</p>
             <p>Address</p>
         </address>
+        <p>The ins element: <ins>the insertion element</ins></p>
     </body>
 </html>
