The <del> element

--- a/02.Text.html
+++ b/02.Text.html
@@ -26,5 +26,6 @@
             <p>Address</p>
         </address>
         <p>The ins element: <ins>the insertion element</ins></p>
+        <p>The del element: <del>the deletion element</del></p>
     </body>
 </html>
