--- a/02.Text.html
+++ b/02.Text.html
@@ -27,5 +27,6 @@
         </address>
         <p>The ins element: <ins>the insertion element</ins></p>
         <p>The del element: <del>the deletion element</del></p>
+        <p>The s element: <s>the s element</s></p>
     </body>
 </html>
