--- a/03.Lists.html
+++ b/03.Lists.html
@@ -4,5 +4,9 @@
             <li>item1</li>
             <li>item2</li>
         </ol>
+        <ul>
+            <li>item</li>
+            <li>item</li>
+        </ul>
     </body>
 </html>
