The <dl> element

--- a/03.Lists.html
+++ b/03.Lists.html
@@ -8,5 +8,13 @@
             <li>item</li>
             <li>item</li>
         </ul>
+        <dl>
+            <dt>definition term</dt>
+            <dd>definition 1</dd>
+            <dd>definition 2</dd>
+            <dt>definition term</dt>
+            <dd>definition 1</dd>
+            <dd>definition 2</dd>
+        </dl>
     </body>
 </html>
