The <a> element: relative URL

--- a/04.Links.html
+++ b/04.Links.html
@@ -1,5 +1,8 @@
 <html>
     <body>
-        <a href="http://www.baidu.com"> Baidu </a>
+        <p><a href="http://www.baidu.com"> Baidu </a></p>
+        <p><a href="03.Lists.html"> Relative URL </a></p>
+        <p><a href="./03.Lists.html"> Relative URL </a></p>
+        <p><a href="/03.Lists.html"> Relative URL </a></p>
     </body>
 </html>
