The <a> element: mailto

--- a/04.Links.html
+++ b/04.Links.html
@@ -4,5 +4,6 @@
         <p><a href="03.Lists.html"> Relative URL </a></p>
         <p><a href="./03.Lists.html"> Relative URL </a></p>
         <p><a href="/03.Lists.html"> Relative URL </a></p>
+        <p><a href="mailto:hello@world.com">mailto</a></p>
     </body>
 </html>
