--- a/04.Links.html
+++ b/04.Links.html
@@ -5,5 +5,6 @@
         <p><a href="./03.Lists.html"> Relative URL </a></p>
         <p><a href="/03.Lists.html"> Relative URL </a></p>
         <p><a href="mailto:hello@world.com">mailto</a></p>
+        <p><a href="http://www.baidu.com" target="_blank">Baidu</p>
     </body>
 </html>
