The <a> element: link to a specific part of the same page

--- a/04.Links.html
+++ b/04.Links.html
@@ -1,10 +1,13 @@
 <html>
     <body>
+        <p id="top"> Top of a page </p>
         <p><a href="http://www.baidu.com"> Baidu </a></p>
         <p><a href="03.Lists.html"> Relative URL </a></p>
         <p><a href="./03.Lists.html"> Relative URL </a></p>
         <p><a href="/03.Lists.html"> Relative URL </a></p>
         <p><a href="mailto:hello@world.com">mailto</a></p>
         <p><a href="http://www.baidu.com" target="_blank">Baidu</p>
+        <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
+        <p><a href="#top"> Back to Top</p>
     </body>
 </html>
