--- a/04.Links.html
+++ b/04.Links.html
@@ -9,5 +9,6 @@
         <p><a href="http://www.baidu.com" target="_blank">Baidu</p>
         <p><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></p>
         <p><a href="#top"> Back to Top</p>
+        <p><a href="04.links.html#top"> Jump to a specific part of another page</p>
     </body>
 </html>
