The <img> element: align

--- a/05.Images.html
+++ b/05.Images.html
@@ -2,5 +2,6 @@
     <body>
         <p><img src="Image.png" alt="The text description of the image which will be seen when the image cannot be seen." title="It is seen when the user hovers over the image."/></p>
         <p><img src="Image.png" width="300" height="200"/></p>
+        <p><img src="Image.png" align="right"/>This has been removed from HTML5</p>
     </body>
 </html>
