The <img> element: vertical align

--- a/05.Images.html
+++ b/05.Images.html
@@ -3,5 +3,9 @@
         <p><img src="Image.png" alt="The text description of the image which will be seen when the image cannot be seen." title="It is seen when the user hovers over the image."/></p>
         <p><img src="Image.png" width="300" height="200"/></p>
         <p><img src="Image.png" align="right"/>This has been removed from HTML5</p>
+        <hr />
+        <p><img src="Image.png" align="top"/>Place the first line of text near the top of the image and subsequent lines of text appear under the image.</p>
+        <p><img src="Image.png" align="middle"/>Place the first line of text near the vertical middle of the image and subsequent lines of text appear under the image.</p>
+        <p><img src="Image.png" align="bottom"/>Place the first line of text near the bottom of the image and subsequent lines of text appear under the image.</p>
     </body>
 </html>
