The <figure> element & the <figcaption> element

--- a/05.Images.html
+++ b/05.Images.html
@@ -7,5 +7,10 @@
         <p><img src="Image.png" align="top"/>Place the first line of text near the top of the image and subsequent lines of text appear under the image.</p>
         <p><img src="Image.png" align="middle"/>Place the first line of text near the vertical middle of the image and subsequent lines of text appear under the image.</p>
         <p><img src="Image.png" align="bottom"/>Place the first line of text near the bottom of the image and subsequent lines of text appear under the image.</p>
+        <figure>
+            <img src="Image.png"/>
+            <img src="Image.png"/>
+            <figcaption>Figure Caption</figcaption>
+        </figure>
     </body>
 </html>
