--- a/06.Tables.html
+++ b/06.Tables.html
@@ -21,6 +21,10 @@
                 <td>8</td>
                 <td>9</td>
             </tr>
+            <tr>
+                <td colspan="2">10</td>
+                <td>11</td>
+            </tr>
         </table>
     </body>
 </html>
