--- a/06.Tables.html
+++ b/06.Tables.html
@@ -25,6 +25,15 @@
                 <td colspan="2">10</td>
                 <td>11</td>
             </tr>
+            <tr>
+                <td>11</td>
+                <td rowspan="2">12</td>
+                <td>13</td>
+            </tr>
+            <tr>
+                <td>14</td>
+                <td>15</td>
+            </tr>
         </table>
     </body>
 </html>
