--- a/06.Tables.html
+++ b/06.Tables.html
@@ -35,5 +35,34 @@
                 <td>15</td>
             </tr>
         </table>
+        <hr />
+        <table>
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Col_1</th>
+                    <th>Col_2</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>Row_1</th>
+                    <td>1</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <th>Row_2</th>
+                    <td>3</td>
+                    <td>4</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th>Total</th>
+                    <td>4</td>
+                    <td>6</td>
+                </tr>
+            </tfoot>
+        </table>
     </body>
 </html>
