The <table> element: width, cellpadding, cellspacing; The <th> element: width. All of these should be replaced by CSS.

--- a/06.Tables.html
+++ b/06.Tables.html
@@ -36,10 +36,10 @@
             </tr>
         </table>
         <hr />
-        <table>
+        <table width="400" cellpadding="10" cellspacing="50">
             <thead>
                 <tr>
-                    <th></th>
+                    <th width="50"></th>
                     <th>Col_1</th>
                     <th>Col_2</th>
                 </tr>
