The <table> element: border & bgcolor. This should be replaced by CSS.

--- a/06.Tables.html
+++ b/06.Tables.html
@@ -36,9 +36,9 @@
             </tr>
         </table>
         <hr />
-        <table width="400" cellpadding="10" cellspacing="50">
+        <table width="400" cellpadding="10" cellspacing="50" border="2" bgcolor="#ff0000">
             <thead>
-                <tr>
+                <tr bgcolor="#00ff00">
                     <th width="50"></th>
                     <th>Col_1</th>
                     <th>Col_2</th>
