--- a/06.Tables.html
+++ b/06.Tables.html
@@ -40,25 +40,25 @@
             <thead>
                 <tr bgcolor="#00ff00">
                     <th width="50"></th>
-                    <th>Col_1</th>
-                    <th>Col_2</th>
+                    <th scope="col">Col_1</th>
+                    <th scope="col">Col_2</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <th>Row_1</th>
+                    <th scope="row">Row_1</th>
                     <td>1</td>
                     <td>2</td>
                 </tr>
                 <tr>
-                    <th>Row_2</th>
+                    <th scope="row">Row_2</th>
                     <td>3</td>
                     <td>4</td>
                 </tr>
             </tbody>
             <tfoot>
                 <tr>
-                    <th>Total</th>
+                    <th scope="row">Total</th>
                     <td>4</td>
                     <td>6</td>
                 </tr>
