The <textarea> element

--- a/07.Forms.html
+++ b/07.Forms.html
@@ -7,6 +7,10 @@
             <p>
                 Password: <input type="password" name="password" size="15" maxlength="30"/>
             </p>
+            <p>Message:
+                <br />
+                <textarea name="message" cols="30" rows="4">Enter your message...</textarea>
+            </p>
         </form>
     </body>
 </html>
