The <input> element: radio

--- a/07.Forms.html
+++ b/07.Forms.html
@@ -11,6 +11,12 @@
                 <br />
                 <textarea name="message" cols="30" rows="4">Enter your message...</textarea>
             </p>
+            <p>
+                Support:
+                <br />
+                <input type="radio" name="support" value="good" /> Good
+                <input type="radio" name="support" value="bad" checked="checked"/> Bad
+            </p>
         </form>
     </body>
 </html>
