The <input> element: checkbox

--- a/07.Forms.html
+++ b/07.Forms.html
@@ -17,6 +17,12 @@
                 <input type="radio" name="support" value="good" /> Good
                 <input type="radio" name="support" value="bad" checked="checked"/> Bad
             </p>
+            <p>
+                Which colors do you like:<br />
+                <input type="checkbox" name="colors" value="red" checked="checked" /> Red
+                <input type="checkbox" name="colors" value="green" /> Green
+                <input type="checkbox" name="colors" value="blue" checked="checked" /> Blue
+            </p>
         </form>
     </body>
 </html>
