The <select> element

--- a/07.Forms.html
+++ b/07.Forms.html
@@ -23,6 +23,14 @@
                 <input type="checkbox" name="colors" value="green" /> Green
                 <input type="checkbox" name="colors" value="blue" checked="checked" /> Blue
             </p>
+            <p>
+                Which type of OS are you using: <br/>
+                <select name="os">
+                    <option value="windows"> Windows 7 </option>
+                    <option value="android"> Android </option>
+                    <option value="mac" selected="selected"> Mac OS X </option>
+                </select>
+            </p>
         </form>
     </body>
 </html>
