The <input> element: file

--- a/07.Forms.html
+++ b/07.Forms.html
@@ -31,6 +31,9 @@
                     <option value="mac" selected="selected"> Mac OS X </option>
                 </select>
             </p>
+            <p>
+                Please upload a ReadMe: <input type="file" name="readme"/>
+            </p>
         </form>
     </body>
 </html>
