The <input> element: submit

--- a/07.Forms.html
+++ b/07.Forms.html
@@ -34,6 +34,9 @@
             <p>
                 Please upload a ReadMe: <input type="file" name="readme"/>
             </p>
+            <p>
+                <input type="submit" name="submit" value="GO"/>
+            </p>
         </form>
     </body>
 </html>
