The <input> element: image submit button

--- a/07.Forms.html
+++ b/07.Forms.html
@@ -37,6 +37,9 @@
             <p>
                 <input type="submit" name="submit" value="GO"/>
             </p>
+            <p>
+                <input type="image" src="Image.png" width="150" height="100" />
+            </p>
         </form>
     </body>
 </html>
