The <button> element

--- a/07.Forms.html
+++ b/07.Forms.html
@@ -40,6 +40,9 @@
             <p>
                 <input type="image" src="Image.png" width="150" height="100" />
             </p>
+            <p>
+                <button><img src="Image.png" width="150" height="100">A BUTTON</button>
+            </p>
         </form>
     </body>
 </html>
