The <input> element: hidden

--- a/07.Forms.html
+++ b/07.Forms.html
@@ -43,6 +43,9 @@
             <p>
                 <button><img src="Image.png" width="150" height="100">A BUTTON</button>
             </p>
+            <p>
+                <input type="hidden" name="hiddenbutton" value="hiddeninput"/>
+            </p>
         </form>
     </body>
 </html>
