--- a/07.Forms.html
+++ b/07.Forms.html
@@ -46,6 +46,13 @@
             <p>
                 <input type="hidden" name="hiddenbutton" value="hiddeninput"/>
             </p>
+            <p>
+                <label> Age: <input type="text" name="age" /></label>
+            </p>
+            <p>
+                Gender: <input id="gender_female" type="radio" name="gender" value="female" /> <label for="gender_female">Female</label>
+                        <input id="gender_male" type="radio" name="gender" value="male" /> <label for="gender_male">Male</label>
+            </p>
         </form>
     </body>
 </html>
