The <fieldset> & <legend> element

--- a/07.Forms.html
+++ b/07.Forms.html
@@ -46,13 +46,16 @@
             <p>
                 <input type="hidden" name="hiddenbutton" value="hiddeninput"/>
             </p>
-            <p>
-                <label> Age: <input type="text" name="age" /></label>
-            </p>
-            <p>
-                Gender: <input id="gender_female" type="radio" name="gender" value="female" /> <label for="gender_female">Female</label>
-                        <input id="gender_male" type="radio" name="gender" value="male" /> <label for="gender_male">Male</label>
-            </p>
+            <fieldset>
+                <legend>Personal Information</legend>
+                <p>
+                    <label> Age: <input type="text" name="age" /></label>
+                </p>
+                <p>
+                    Gender: <input id="gender_female" type="radio" name="gender" value="female" /> <label for="gender_female">Female</label>
+                            <input id="gender_male" type="radio" name="gender" value="male" /> <label for="gender_male">Male</label>
+                </p>
+            </fieldset>
         </form>
     </body>
 </html>
