The 'required' attribute of any form element

--- a/07.Forms.html
+++ b/07.Forms.html
@@ -2,7 +2,7 @@
     <body>
         <form action="http://127.0.0.1/hello.py" method="post">
             <p>
-                Username: <input type="text" name="username" size="15" maxlength="30"/>
+                Username: <input type="text" name="username" size="15" maxlength="30" required/>
             </p>
             <p>
                 Password: <input type="password" name="password" size="15" maxlength="30"/>
