The <input> element: date

--- a/07.Forms.html
+++ b/07.Forms.html
@@ -56,6 +56,9 @@
                             <input id="gender_male" type="radio" name="gender" value="male" /> <label for="gender_male">Male</label>
                 </p>
             </fieldset>
+            <p>
+                Input a date: <input type="date" name="input_date"/>
+            </p>
         </form>
     </body>
 </html>
