The <input> element: email

--- a/07.Forms.html
+++ b/07.Forms.html
@@ -59,6 +59,9 @@
             <p>
                 Input a date: <input type="date" name="input_date"/>
             </p>
+            <p>
+                Input an email: <input type="email" name="email">
+            </p>
         </form>
     </body>
 </html>
