The <input> element: url

--- a/07.Forms.html
+++ b/07.Forms.html
@@ -62,6 +62,9 @@
             <p>
                 Input an email: <input type="email" name="email">
             </p>
+            <p>
+                Input an URL: <input type="url" name="website"/>
+            </p>
         </form>
     </body>
 </html>
