The <input> element: search

--- a/07.Forms.html
+++ b/07.Forms.html
@@ -65,6 +65,9 @@
             <p>
                 Input an URL: <input type="url" name="website"/>
             </p>
+            <p>
+                Input something to search: <input type="search" name="search" placeholder="default"/>
+            </p>
         </form>
     </body>
 </html>
