The <div> element

--- a/08.Extra.Markup.html
+++ b/08.Extra.Markup.html
@@ -2,5 +2,8 @@
 <html>
     <body>
         <!-- Comments -->
+        <div>
+            <p>It can be helpful to add a comment after the div element is closing. </p>
+        </div>
     </body>
 </html>
