The <span> element

--- a/08.Extra.Markup.html
+++ b/08.Extra.Markup.html
@@ -5,5 +5,7 @@
         <div>
             <p>It can be helpful to add a comment after the div element is closing. </p>
         </div>
+        <p>Hello <span class="important">world</span></p>
+        <p>Hello <span class="important">hell</span></p>
     </body>
 </html>
