The <meta> element

--- a/08.Extra.Markup.html
+++ b/08.Extra.Markup.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta name="description" content="Extra Markup"/>
+        <meta name="keywords" content="meta, iframe, div"/>
+        <meta name="robots" content="noindex"/>
+        <meta http-equiv="author" content="No Name"/>
+        <meta http-equiv="pragma" content="no-cache"/>
+        <meta http-equiv="expires" content="Fri, 04 Apr 2014 23:59:59 GMT"/>
+    </head>
     <body>
         <!-- Comments -->
         <div>
