--- a/08.Extra.Markup.html
+++ b/08.Extra.Markup.html
@@ -16,5 +16,6 @@
         <iframe src="07.forms.html" height="200" width="200"></iframe>
         <p>Hello <span class="important">world</span></p>
         <p>Hello <span class="important">hell</span></p>
+        <p>Escape Characters: &lt;, &gt;, &amp;, &quot;, &cent;, &pound;, &yen;, &euro;, &copy;, &reg;, &trade;, &lsquo;, &rsquo;, &ldquo;, &rdquo;, &times;, &divide; </p>
     </body>
 </html>
