The <source> element in the <video> element

--- a/09.Flash.Video.Audio.html
+++ b/09.Flash.Video.Audio.html
@@ -3,5 +3,10 @@
         <video src="tmp.mp4" poster="tmp_poster.jpg" width="400" height="300" preload="auto" controls autoplay loop>
             <p>A mp4 video</p>
         </video>
+        <video poster="tmp_poster.jpg" width="400" height="300" preload="auto" controls autoplay loop>
+            <source src="tmp.mp4" type='video/mp4;codecs="avc1.42E10E, mp4a.40.2"'/>
+            <source src="tmp.webm" type='video/webm;codecs="vp8, vorbis"'/>
+            <p>A mp4 video</p>
+        </video>
     </body>
 </html>
