The <audio> element

--- a/09.Flash.Video.Audio.html
+++ b/09.Flash.Video.Audio.html
@@ -8,5 +8,13 @@
             <source src="tmp.webm" type='video/webm;codecs="vp8, vorbis"'/>
             <p>A mp4 video</p>
         </video>
+        <audio src="tmp.mp3" preload="auto" controls autoplay loop>
+            <p>A mp3 audio</p>
+        </audio>
+        <audio preload="auto" controls autoplay loop>
+            <source src="tmp.mp3"/>
+            <source src="tmp.ogg"/>
+            <p>A mp3 audio</p>
+        </audio>
     </body>
 </html>
