--- a/10.Introducing.CSS.html
+++ b/10.Introducing.CSS.html
@@ -1,9 +1,15 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="10.Introducing.CSS.css">
+        <style type="text/css">
+            p {
+                font-family: Arial
+            }
+        </style>
     </head>
     <body>
         <h1>Head 1</h1>
         <h2>Head 2</h2>
+        <p>Paragraph</p>
     </body>
 </html>
