--- a/10.Introducing.CSS.html
+++ b/10.Introducing.CSS.html
@@ -8,8 +8,24 @@
         </style>
     </head>
     <body>
-        <h1>Head 1</h1>
-        <h2>Head 2</h2>
-        <p>Paragraph</p>
+        <h1 class="Pig">Head 1</h1>
+        <h2 class="Monkey">Head 2</h2>
+        <p class="Pig">Paragraph</p>
+        <p class="Monkey">Monkey Paragraph</p>
+        <p id="Chick">Chick Paragraph</p>
+        <ol>
+            <li><p>Hello</p></li>
+            <li><p>World</p></li>
+        </ol>
+        <ol>
+            <li><p>Hello</p></li>
+            <li><p>World</p></li>
+        </ol>
+        <h1> Head 1 </h1>
+        <p> Paragraph </p>
+        <p> Paragraph </p>
+        <h3> Head 3 </h3>
+        <p> Paragraph </p>
+        <p> Paragraph </p>
     </body>
 </html>
