CSS: background-color

--- a/11.Color.html
+++ b/11.Color.html
@@ -9,6 +9,7 @@
             }
             #rgb_value {
                 color: rgb(100, 100, 90);
+                background-color: #ffff00;
             }
         </style>
     </head>
