--- a/11.Color.html
+++ b/11.Color.html
@@ -10,6 +10,10 @@
             #rgb_value {
                 color: rgb(100, 100, 90);
                 background-color: #ffff00;
+                opacity: 0.5;
+            }
+            #opacity {
+                background-color: rgba(255, 0, 0, 0.2);
             }
         </style>
     </head>
@@ -17,5 +21,6 @@
         <p id="color_name">Color Name</p>
         <p id="color_hex">Color HEX</p>
         <p id="rgb_value">RGB Value</p>
+        <p id="opacity">Opacity</p>
     </body>
 </html>
