CSS - color: HSL(A)

--- a/11.Color.html
+++ b/11.Color.html
@@ -15,6 +15,16 @@
             #opacity {
                 background-color: rgba(255, 0, 0, 0.2);
             }
+            /*
+             * h: 0 - 360
+             * s, l: 0 - 1
+             */
+            #hsl {
+                background-color: hsl(0, 0%, 78%);
+            }
+            #hsla {
+                background-color: hsla(0, 0%, 78%, 0.2);
+            }
         </style>
     </head>
     <body>
@@ -22,5 +32,7 @@
         <p id="color_hex">Color HEX</p>
         <p id="rgb_value">RGB Value</p>
         <p id="opacity">Opacity</p>
+        <p id="hsl">HSL</p>
+        <p id="hsla">HSLA</p>
     </body>
 </html>
