CSS Text: font-size

--- a/12.Text.html
+++ b/12.Text.html
@@ -6,14 +6,21 @@
              */
             #serif {
                 font-family: Georgia, Times, serif;
+                font-size: 20px;
             }
             #monospace {
                 font-family: "Courier New", Courier, monospace;
+                font-size: 200%;
+            }
+            #em {
+                font-size: 1.3em;
             }
         </style>
     </head>
     <body>
+        <p>Hello World</p>
         <p id="serif">Serif Typeface</p>
         <p id="monospace">Monospace Typeface</p>
+        <p id="em">Monospace Typeface</p>
     </body>
 </html>
