CSS Text: font-weight

--- a/12.Text.html
+++ b/12.Text.html
@@ -15,6 +15,9 @@
             #em {
                 font-size: 1.3em;
             }
+            #bold {
+                font-weight: bold;
+            }
         </style>
     </head>
     <body>
@@ -22,5 +25,6 @@
         <p id="serif">Serif Typeface</p>
         <p id="monospace">Monospace Typeface</p>
         <p id="em">Monospace Typeface</p>
+        <p id="bold">Font Weight</p>
     </body>
 </html>
