CSS Text: font-style

--- a/12.Text.html
+++ b/12.Text.html
@@ -18,6 +18,12 @@
             #bold {
                 font-weight: bold;
             }
+            #italic {
+                font-style: italic;
+            }
+            #oblique {
+                font-style: oblique;
+            }
         </style>
     </head>
     <body>
@@ -26,5 +32,7 @@
         <p id="monospace">Monospace Typeface</p>
         <p id="em">Monospace Typeface</p>
         <p id="bold">Font Weight</p>
+        <p id="italic">Italic</p>
+        <p id="oblique">Oblique</p>
     </body>
 </html>
