CSS Text: text-transform

--- a/12.Text.html
+++ b/12.Text.html
@@ -24,6 +24,15 @@
             #oblique {
                 font-style: oblique;
             }
+            #uppercase {
+                text-transform: uppercase;
+            }
+            #lowercase {
+                text-transform: lowercase;
+            }
+            #capitalize {
+                text-transform: capitalize;
+            }
         </style>
     </head>
     <body>
@@ -34,5 +43,8 @@
         <p id="bold">Font Weight</p>
         <p id="italic">Italic</p>
         <p id="oblique">Oblique</p>
+        <p id="uppercase">uppercase</p>
+        <p id="lowercase">LOWERCASE</p>
+        <p id="capitalize">capticalize</p>
     </body>
 </html>
