CSS Text: text-decoration

--- a/12.Text.html
+++ b/12.Text.html
@@ -33,6 +33,21 @@
             #capitalize {
                 text-transform: capitalize;
             }
+            .underline {
+                text-decoration: underline;
+            }
+            #underline1 {
+                text-decoration: none;
+            }
+            #Overline {
+                text-decoration: overline;
+            }
+            #Linethrough {
+                text-decoration: line-through;
+            }
+            #blink {
+                text-decoration: blink;
+            }
         </style>
     </head>
     <body>
@@ -46,5 +61,10 @@
         <p id="uppercase">uppercase</p>
         <p id="lowercase">LOWERCASE</p>
         <p id="capitalize">capticalize</p>
+        <p id="underline1" class="underline">Underline 1</p>
+        <p class="underline">Underline 2</p>
+        <p id="Overline">Overline</p>
+        <p id="Linethrough">Linethrough</p>
+        <p id="blink">Blink</p>
     </body>
 </html>
