--- a/12.Text.html
+++ b/12.Text.html
@@ -48,6 +48,9 @@
             #blink {
                 text-decoration: blink;
             }
+            #line_height {
+                line-height: 5em; /* 1.4 - 1.5 is preferred. */
+            }
         </style>
     </head>
     <body>
@@ -66,5 +69,6 @@
         <p id="Overline">Overline</p>
         <p id="Linethrough">Linethrough</p>
         <p id="blink">Blink</p>
+        <p id="line_height">Line Height</p>
     </body>
 </html>
