--- a/12.Text.html
+++ b/12.Text.html
@@ -51,6 +51,12 @@
             #line_height {
                 line-height: 5em; /* 1.4 - 1.5 is preferred. */
             }
+            #letter_spacing {
+                letter-spacing: 1em;
+            }
+            #word_spacing {
+                word-spacing: 3em;
+            }
         </style>
     </head>
     <body>
@@ -70,5 +76,7 @@
         <p id="Linethrough">Linethrough</p>
         <p id="blink">Blink</p>
         <p id="line_height">Line Height</p>
+        <p id="letter_spacing">Letter Spacing</p>
+        <p id="word_spacing">Word Spacing</p>
     </body>
 </html>
