CSS Text: text-align

--- a/12.Text.html
+++ b/12.Text.html
@@ -57,6 +57,18 @@
             #word_spacing {
                 word-spacing: 3em;
             }
+            #text_align_left {
+                text-align: left;
+            }
+            #text_align_right {
+                text-align: right;
+            }
+            #text_align_center {
+                text-align: center;
+            }
+            #text_align_justify {
+                text-align: justify;
+            }
         </style>
     </head>
     <body>
@@ -78,5 +90,9 @@
         <p id="line_height">Line Height</p>
         <p id="letter_spacing">Letter Spacing</p>
         <p id="word_spacing">Word Spacing</p>
+        <p id="text_align_left">Text Align Left</p>
+        <p id="text_align_right">Text Align Right</p>
+        <p id="text_align_center">Text Align Center</p>
+        <p id="text_align_justify">TextAlignJustifyTextAlignJustifyTextAlignJustifyTextAlignJustify TextAlignJustifyTextAlignJustifyTextAlignJustifyTextAlignJustifyTextAlignJustify TextAlignJustifyTextAlignJustifyTextAlignJustifyTextAlignJustifyTextAlignJustify TextAlignJustifyTextAlignJustify</p>
     </body>
 </html>
