CSS Text: pseudo-element - first-line, first-letter

--- a/12.Text.html
+++ b/12.Text.html
@@ -75,6 +75,12 @@
             #text_shadow {
                 text-shadow: 1px 1px 3px #666666;
             }
+            #first_letter:first-letter {
+                font-size: 200%;
+            }
+            #first_line:first-line {
+                font-size: 200%;
+            }
         </style>
     </head>
     <body>
@@ -102,5 +108,7 @@
         <p id="text_align_justify">TextAlignJustifyTextAlignJustifyTextAlignJustifyTextAlignJustify TextAlignJustifyTextAlignJustifyTextAlignJustifyTextAlignJustifyTextAlignJustify TextAlignJustifyTextAlignJustifyTextAlignJustifyTextAlignJustifyTextAlignJustify TextAlignJustifyTextAlignJustify</p>
         <p id="text_indent">Text Indent Text Indent Text Indent Text Indent Text Indent Text Indent Text Indent Text Indent Text Indent Text Indent Text Indent Text Indent Text Indent Text Indent Text Indent Text Indent</p>
         <p id="text_shadow">Text Shadow</p>
+        <p id="first_letter">First Letter</p>
+        <p id="first_line">First Line First Line First Line First Line First Line First Line First Line First Line First Line First Line First Line First Line First Line First Line</p>
     </body>
 </html>
