CSS Text: pseudo-class - a:*

--- a/12.Text.html
+++ b/12.Text.html
@@ -81,6 +81,18 @@
             #first_line:first-line {
                 font-size: 200%;
             }
+            a:link {
+                color: deeppink;
+            }
+            a:visited {
+                color: black;
+            }
+            a:hover {
+                color: deeppink;
+            }
+            a:active {
+                color: darkcyan;
+            }
         </style>
     </head>
     <body>
@@ -110,5 +122,6 @@
         <p id="text_shadow">Text Shadow</p>
         <p id="first_letter">First Letter</p>
         <p id="first_line">First Line First Line First Line First Line First Line First Line First Line First Line First Line First Line First Line First Line First Line First Line</p>
+        <p><a href="12.Text.html">Pseudo-class</a></p>
     </body>
 </html>
