--- a/13.Boxes.html
+++ b/13.Boxes.html
@@ -6,11 +6,19 @@
                 width: 300px;
                 background-color: #ff0000;
             }
+            #limited_width {
+                min-width: 400px;
+                max-width: 600px;
+                background-color: #00ff00;
+            }
         </style>
     </head>
     <body>
         <div id="box_dimension">
             Box Dimension
+        </div>
+        <div id="limited_width">
+            Limited Width
         </div>
     </body>
 </html>
