CSS Box - Limited Height

--- a/13.Boxes.html
+++ b/13.Boxes.html
@@ -11,6 +11,12 @@
                 max-width: 600px;
                 background-color: #00ff00;
             }
+            #limited_height {
+                width: 100px;
+                background-color: #0000ff;
+                min-height: 10px;
+                max-height: 20px;
+            }
         </style>
     </head>
     <body>
@@ -20,5 +26,9 @@
         <div id="limited_width">
             Limited Width
         </div>
+        <div id="limited_height">
+            Limited Height
+        </div>
+        <div>Another Paragraph</div>
     </body>
 </html>
