CSS Box - border-style & border-width

--- a/13.Boxes.html
+++ b/13.Boxes.html
@@ -31,6 +31,10 @@
                 max-height: 80px;
                 overflow: scroll;
             }
+            #border_width {
+                border-style: solid;
+                border-width: 50px 2px 12px 4px; /* t, r, b, l */
+            }
         </style>
     </head>
     <body>
@@ -52,5 +56,8 @@
             Overflowing Content Scroll Scroll
         </div>
         <div>Another Paragraph</div>
+        <div id="border_width">
+            Border Width
+        </div>
     </body>
 </html>
