--- a/13.Boxes.html
+++ b/13.Boxes.html
@@ -34,6 +34,7 @@
             #border_width {
                 border-style: solid;
                 border-width: 50px 2px 12px 4px; /* t, r, b, l */
+                border-color: #ff0000 #00ff00 #0000ff #ff00ff;
             }
         </style>
     </head>
