CSS Box - border shorthand

--- a/13.Boxes.html
+++ b/13.Boxes.html
@@ -36,6 +36,9 @@
                 border-width: 50px 2px 12px 4px; /* t, r, b, l */
                 border-color: #ff0000 #00ff00 #0000ff #ff00ff;
             }
+            #border_shorthand {
+                border: 3px solid #00ffff;
+            }
         </style>
     </head>
     <body>
@@ -60,5 +63,6 @@
         <div id="border_width">
             Border Width
         </div>
+        <div id="border_shorthand"> Border Shorthand </div>
     </body>
 </html>
