CSS Box - padding

--- a/13.Boxes.html
+++ b/13.Boxes.html
@@ -39,6 +39,12 @@
             #border_shorthand {
                 border: 3px solid #00ffff;
             }
+            #padding_with_width {
+                width: 100;
+                border-style: solid;
+                padding-right: 100px;   /* padding is added onto box width */
+                border-right-width: 20px;
+            }
         </style>
     </head>
     <body>
@@ -64,5 +70,6 @@
             Border Width
         </div>
         <div id="border_shorthand"> Border Shorthand </div>
+        <div id="padding_with_width"> Padding with border width </div>
     </body>
 </html>
