CSS Box - margin

--- a/13.Boxes.html
+++ b/13.Boxes.html
@@ -45,6 +45,10 @@
                 padding-right: 100px;   /* padding is added onto box width */
                 border-right-width: 20px;
             }
+            #margin {
+                border-style: solid;
+                margin: 20px 40px; /* left/right, top/bottom */
+            }
         </style>
     </head>
     <body>
@@ -71,5 +75,6 @@
         </div>
         <div id="border_shorthand"> Border Shorthand </div>
         <div id="padding_with_width"> Padding with border width </div>
+        <div id="margin">Margin</div>
     </body>
 </html>
