CSS Box - Centering content

--- a/13.Boxes.html
+++ b/13.Boxes.html
@@ -49,6 +49,12 @@
                 border-style: solid;
                 margin: 20px 40px; /* left/right, top/bottom */
             }
+            #center_content {
+                border-style: solid;
+                width: 300px;
+                margin: 10px auto 10px auto; /* Center the box: set the width and make the left and the right margins auto */
+                text-align: center;
+            }
         </style>
     </head>
     <body>
@@ -76,5 +82,6 @@
         <div id="border_shorthand"> Border Shorthand </div>
         <div id="padding_with_width"> Padding with border width </div>
         <div id="margin">Margin</div>
+        <div id="center_content"> Centering Content</div>
     </body>
 </html>
