CSS Box - display: inline, block, inline-block, none

--- a/13.Boxes.html
+++ b/13.Boxes.html
@@ -55,6 +55,12 @@
                 margin: 10px auto 10px auto; /* Center the box: set the width and make the left and the right margins auto */
                 text-align: center;
             }
+            li {
+                display: inline;
+            }
+            #display_none {
+                display: none;
+            }
         </style>
     </head>
     <body>
@@ -83,5 +89,10 @@
         <div id="padding_with_width"> Padding with border width </div>
         <div id="margin">Margin</div>
         <div id="center_content"> Centering Content</div>
+        <ul>
+            <li>Hello</li>
+            <li id="display_none">World</li>
+            <li>No name</li>
+        </ul>
     </body>
 </html>
