CSS Box - visibility

--- a/13.Boxes.html
+++ b/13.Boxes.html
@@ -61,6 +61,9 @@
             #display_none {
                 display: none;
             }
+            #visiblity {
+                visibility: hidden; /* A blank space will appear in this place. */
+            }
         </style>
     </head>
     <body>
@@ -89,6 +92,7 @@
         <div id="padding_with_width"> Padding with border width </div>
         <div id="margin">Margin</div>
         <div id="center_content"> Centering Content</div>
+        <div id="visiblity"> Visibility </div>
         <ul>
             <li>Hello</li>
             <li id="display_none">World</li>
