CSS Box - border-image

--- a/13.Boxes.html
+++ b/13.Boxes.html
@@ -64,6 +64,10 @@
             #visiblity {
                 visibility: hidden; /* A blank space will appear in this place. */
             }
+            #border_image {
+                border: 20px;
+                border-image: url(Image.png) 150 350 250 250 round;
+            }
         </style>
     </head>
     <body>
@@ -98,5 +102,6 @@
             <li id="display_none">World</li>
             <li>No name</li>
         </ul>
+        <div id="border_image">Border Image</div>
     </body>
 </html>
