--- a/13.Boxes.html
+++ b/13.Boxes.html
@@ -68,6 +68,10 @@
                 border: 20px;
                 border-image: url(Image.png) 150 350 250 250 round;
             }
+            #box_shadow {
+                /* Horizontal Offset, Vertical Offset, Blur Distance, Spread of Shadow */
+                box-shadow: 15px 5px 5px 5px #777777;
+            }
         </style>
     </head>
     <body>
@@ -103,5 +107,6 @@
             <li>No name</li>
         </ul>
         <div id="border_image">Border Image</div>
+        <div id="box_shadow">Box Shadow</div>
     </body>
 </html>
