CSS Box - Rounded Corners

--- a/13.Boxes.html
+++ b/13.Boxes.html
@@ -71,6 +71,12 @@
             #box_shadow {
                 /* Horizontal Offset, Vertical Offset, Blur Distance, Spread of Shadow */
                 box-shadow: 15px 5px 5px 5px #777777;
+                margin-bottom: 20px;
+            }
+            #border_radius {
+                border-style: solid;
+                text-align: center;
+                border-radius: 5px 5px 5px 5px;
             }
         </style>
     </head>
@@ -108,5 +114,6 @@
         </ul>
         <div id="border_image">Border Image</div>
         <div id="box_shadow">Box Shadow</div>
+        <div id="border_radius">Border Radius</div>
     </body>
 </html>
