CSS Box - Ellitcial Shape

--- a/13.Boxes.html
+++ b/13.Boxes.html
@@ -78,6 +78,11 @@
                 text-align: center;
                 border-radius: 5px 5px 5px 5px;
             }
+            #elliptical_shape {
+                border-style: solid;
+                text-align: center;
+                border-radius: 80px 80px 80px 80px / 50px 50px 50px 50px;
+            }
         </style>
     </head>
     <body>
@@ -115,5 +120,6 @@
         <div id="border_image">Border Image</div>
         <div id="box_shadow">Box Shadow</div>
         <div id="border_radius">Border Radius</div>
+        <div id="elliptical_shape"> Elliptical Shape </div>
     </body>
 </html>
